--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,12 @@
 {
-  "trailingSlash": false,
-  "cleanUrls": true
+  "routes": [
+    {
+      "src": "/",
+      "dest": "/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ]
 }
