Fix: Move static files to public folder and update vercel.json for proper deployment

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/leadballoon-agency/nokier#readme",
   "description": "",
   "dependencies": {
-    "@neondatabase/serverless": "^1.0.2"
+    "@neondatabase/serverless": "^1.0.2",
+    "playwright": "^1.55.1"
   }
 }
